--- a/style.css/style.css
+++ b/style.css/style.css
@@ -13,6 +13,33 @@ tont: size 25px;
 
 
 }
-heade
+header{
+border-bottom: solid 3x
+margin: 2xp
+padding:10px
+color( red green blue)
+)
+}
+chamada
+}{
+backgreund:
+padding-botton:88px
+padding-top:80px
+display: flex
+justity-content> center;}
+chamada-texto(
+  margin-right> 8;
 
+)
+ing(
+    helght: 200px;
+.categoria-video{
+   display:flax;
+   overflow-x: auto;
+   gap:15px;
+}
+)
+.categoria{
+     padding-left: 20px:
+     padding-right: 20px;
 }
