--- a/style.css/style.css
+++ b/style.css/style.css
@@ -38,8 +38,24 @@ ing(
    overflow-x: auto;
    gap:15px;
 }
+padding: 20px
+scroll-behavior
+
+categoria-video::-webkir-scrollbar{
+  background-color:rgp 
+  border-radius:4px;
+}
+
+
+
+
 )
 .categoria{
      padding-left: 20px:
      padding-right: 20px;
 }
+
+
+
+
+
